# sshyp-labs

./: .gitignore  README.md  commit.sh
extensions/export-to-libmutton/: export-to-libmutton.ini  export-to-libmutton.py
extensions/password-pasture/: main.c  requirements.txt
extensions/sshyp-mfa/: package.sh  sshyp-mfa.ext  sshyp-mfa.ini  sshyp-mfa.py
extra/: sshyp-full.png.REMOVED.git-id
extra/conversion-scripts/: sshyp-change-gpg-key.py  sshyp-convert-v1.0.0.py  sshyp-refresh-1.1.1+.py  sshyp-refresh-1.1.1-1.1.2.py
extra/conversion-scripts/gpgToRCW/: binaryGen.sh  go.mod  go.sum  gpg.go  main.go
extra/conversion-scripts/upgradeRCW/: binaryGen.sh  go.mod  go.sum  main.go
extra/mutn-vhs/: cassette.tape  example.asc  usage.md
extra/mutn-vhs/libmutton/development/: github  gitlab
extra/mutn-vhs/libmutton/finance/: bank  credit card company  loan shark
extra/mutn-vhs/libmutton/notes/personal/: todo
extra/mutn-vhs/libmutton/notes/school/: homework
extra/mutn-vhs/libmutton/notes/school/ccnp networking/: chapter 1  chapter 2  chapter 3  chapter 4  chapter 5
extra/mutn-vhs/libmutton/notes/school/world history/: MUTN public debut  the founding of The Principality of Sealand
extra/mutn-vhs/libmutton/social media/: comfy echo chamber  data farm  eliminator of smiles
password-pasture/: CMakeLists.txt  build.sh  main.c
pointers/: v1.5.0  v1.5.1  v1.5.2
sshyp-mfa/: package.sh
sshyp-mfa/extra/: manpage
sshyp-mfa/lib/: sshyp-mfa.py
sshyp-mfa/share/licenses/sshyp-mfa/: license
